# SeismicProcAgent-linux

./: .env  LICENSE  README.md  basic_tools.py  denoising.py  main_nvidia.py  main_ollama.py  main_openai.py  pyproject.toml  seismic_attributes.py
attributes/: seistool.py  util.py
configs/: seismic_tools.json
